@@ -11,12 +11,14 @@
 * Adding #194 fast two pass encoding (thanks to Ugurtan)
 * Adding Confirm dialogue for cancel encode
 * Changing AVC defaults and recommendations for CRF to higher values
+* Changing VP9 to default to mkv instead of webm format to support more audio codecs
 * Fixing German translations (thanks to SMESH)
 * Fixing #171 Be able to select encoder before selecting video
 * Fixing #176 Unable to change queue order or delete task from queue since 4.1.0 (thanks to Etz)
 * Fixing #185 need to specify channel layout when downmixing (thanks to Ugurtan)
 * Fixing #187 cleaning up partial download of FFmpeg (thanks to Todd Wilkinson)
 * Fixing #190 add missing chromaloc parameter for x265 (thanks to Etz)
+* Fixing that deinterlace detection could crash program due to CPython bug issue #43423 (thanks to macx)
 * Fixing that returning item back from queue of a different encoder type would crash Fastflix
 * Fixing HDR10 details to be track specific (thanks to Harybo)
 
